--- a/form1.html
+++ b/form1.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
 <meta charset="utf-8">
-<title>BonkRunner Demo</title>
+<title>BonkRunner with Lives</title>
 <style>
   body { font-family: sans-serif; margin: 0; background: #111; color: #eee; text-align: center; }
   .hidden { display: none; }
@@ -33,8 +33,7 @@
 <div id="gameScreen" class="screen hidden">
   <h2>BonkRunner Game</h2>
   <canvas id="gameCanvas" width="800" height="300"></canvas>
-  <p id="score">Score: 0</p>
-  <button id="restartBtn" class="hidden">Restart Game</button>
+  <p id="score">Score: 0 | Lives: 3</p>
 </div>
 
 <script>
@@ -43,7 +42,8 @@ const payStatus = document.getElementById('payStatus');
 const paymentScreen = document.getElementById('paymentScreen');
 const formScreen = document.getElementById('formScreen');
 const gameScreen = document.getElementById('gameScreen');
-const restartBtn = document.getElementById('restartBtn');
+
+let playerName, playerEmail;
 
 // ---- Fake payment ----
 payBtn.addEventListener('click', () => {
@@ -60,9 +60,9 @@ payBtn.addEventListener('click', () => {
 // ---- Form ----
 document.getElementById('playerForm').addEventListener('submit', (e) => {
   e.preventDefault();
-  const name = document.getElementById('name').value.trim();
-  const email = document.getElementById('email').value.trim();
-  if (name && email) {
+  playerName = document.getElementById('name').value.trim();
+  playerEmail = document.getElementById('email').value.trim();
+  if (playerName && playerEmail) {
     formScreen.classList.add('hidden');
     gameScreen.classList.remove('hidden');
     startGame();
@@ -74,6 +74,7 @@ function startGame() {
   const ctx = canvas.getContext('2d');
   const groundY = 250;
 
+  let lives = 3;
   let player = { x: 50, y: groundY - 30, w: 30, h: 30, vy: 0 };
   let gravity = 0.7;
   let jumpForce = -12;
@@ -94,7 +95,7 @@ function startGame() {
     obstacles.push({ x: canvas.width, y: groundY - height, w: 20, h: height });
   }
 
-  function resetGame() {
+  function resetLife() {
     player.y = groundY - 30;
     player.vy = 0;
     obstacles = [];
@@ -102,11 +103,13 @@ function startGame() {
     score = 0;
     speed = 5;
     gameOver = false;
-    restartBtn.classList.add('hidden');
+    updateScore();
     requestAnimationFrame(loop);
   }
 
-  restartBtn.addEventListener('click', resetGame);
+  function updateScore() {
+    document.getElementById('score').textContent = `Score: ${score} | Lives: ${lives}`;
+  }
 
   function loop() {
     if (gameOver) return;
@@ -139,9 +142,16 @@ function startGame() {
       // Collision
       if (player.x < o.x + o.w && player.x + player.w > o.x &&
           player.y < o.y + o.h && player.y + player.h > o.y) {
-        gameOver = true;
-        document.getElementById('score').textContent = `Game Over! Final Score: ${score}`;
-        restartBtn.classList.remove('hidden');
+        lives--;
+        if (lives > 0) {
+          resetLife();
+        } else {
+          // All lives lost → go back to form
+          alert("Game Over! All lives lost. Returning to form.");
+          gameScreen.classList.add('hidden');
+          formScreen.classList.remove('hidden');
+        }
+        return;
       }
 
       if (o.x + o.w < 0) obstacles.splice(i, 1);
@@ -150,7 +160,7 @@ function startGame() {
     // ---- Score ----
     score++;
     speed += 0.001; // Gradually increase speed
-    document.getElementById('score').textContent = `Score: ${score}`;
+    updateScore();
 
     if (!gameOver) requestAnimationFrame(loop);
   }
