--- a/form3.html
+++ b/form3.html
@@ -1,15 +1,15 @@
 <!doctype html>
 <html lang="en">
 <head>
-<meta charset="utf-8">
-<title>BonkRunner with Lives</title>
+<meta charset="utf-8" />
+<title>BonkRunner — Fixed Jump</title>
 <style>
   body { font-family: sans-serif; margin: 0; background: #111; color: #eee; text-align: center; }
   .hidden { display: none; }
   .screen { padding: 20px; }
   input { padding: 8px; margin: 6px; border-radius: 4px; border: none; }
   button { padding: 10px 16px; margin: 8px; border: none; border-radius: 4px; background: #28a; color: #fff; cursor: pointer; }
-  canvas { background: #222; display: block; margin: 20px auto; border-radius: 8px; }
+  canvas { background: #222; display: block; margin: 20px auto; border-radius: 8px; touch-action: none; }
 </style>
 </head>
 <body>
@@ -82,48 +82,69 @@ function startGame() {
   let frameCount = 0;
   let gameOver = false;
 
-  let player = { 
+  let player = {
     x: 50, y: groundY - 30, w: 30, h: 30, vy: 0,
-    targetH: 30, targetW: 30
+    targetH: 30, targetW: 30, onGround: true
   };
   const gravity = 0.7;
   const jumpForce = -12;
 
-  // ---- Controls ----
-  document.addEventListener('keydown', (e) => {
+  // local handlers so we can remove them later
+  function onKeyDown(e) {
+    // Jump keys
     if (e.code === 'Space' || e.code === 'ArrowUp') {
-      // Allow jump if player is basically on the ground
-      if (Math.abs(player.y - (groundY - player.h)) < 2) {
+      // prevent page from scrolling on Space
+      e.preventDefault();
+      // jump only when onGround flag is true
+      if (player.onGround) {
         player.vy = jumpForce;
+        player.onGround = false;
       }
     }
+
+    // Duck keys
     if (e.code === 'ArrowDown' || e.code === 'KeyS') {
+      e.preventDefault();
       player.targetH = 18;
       player.targetW = 40;
     }
-  });
+  }
 
-  document.addEventListener('keyup', (e) => {
+  function onKeyUp(e) {
     if (e.code === 'ArrowDown' || e.code === 'KeyS') {
       player.targetH = 30;
       player.targetW = 30;
     }
-  });
+  }
+
+  function onTouchStart(e) {
+    // Touch = jump
+    e.preventDefault();
+    if (player.onGround) {
+      player.vy = jumpForce;
+      player.onGround = false;
+    }
+  }
+
+  // Attach controls
+  document.addEventListener('keydown', onKeyDown);
+  document.addEventListener('keyup', onKeyUp);
+  canvas.addEventListener('touchstart', onTouchStart, {passive:false});
 
   // ---- Spawn obstacles ----
   function spawnObstacle() {
     const type = Math.random();
     if (type < 0.6) {
       // Ground block
-      const height = 30 + Math.random()*20;
+      const height = 30 + Math.random() * 20;
       obstacles.push({ x: canvas.width, y: groundY - height, w: 20, h: height, flying: false });
     } else {
       // Bird (flying obstacle)
-      const yPos = groundY - (60 + Math.random()*40);
-      obstacles.push({ 
+      const yPos = groundY - (60 + Math.random() * 40);
+      obstacles.push({
         x: canvas.width, y: yPos, w: 30, h: 20, flying: true,
-        baseY: yPos, amplitude: 10 + Math.random()*10,
-        phase: Math.random()*Math.PI*2
+        baseY: yPos, amplitude: 10 + Math.random() * 10,
+        phase: Math.random() * Math.PI * 2
       });
     }
   }
@@ -132,6 +153,8 @@ function startGame() {
   function resetLife() {
     player.y = groundY - player.h;
     player.vy = 0;
+    player.targetH = 30;
+    player.targetW = 30;
     obstacles = [];
     spawnTimer = 0;
     score = 0;
@@ -146,7 +169,8 @@ function startGame() {
   }
 
   // ---- Helpers ----
-  function drawRoundedRect(x, y, w, h, r) {
+  function drawRoundedRect(x, y, w, h, r, fillStyle) {
+    ctx.fillStyle = fillStyle;
     ctx.beginPath();
     ctx.moveTo(x + r, y);
     ctx.lineTo(x + w - r, y);
@@ -163,26 +187,25 @@ function startGame() {
 
   function drawBird(o, frame) {
     // Body
-    ctx.fillStyle = "#f55";
-    ctx.fillRect(o.x, o.y, o.w, o.h);
+    drawRoundedRect(o.x, o.y, o.w, o.h, 3, "#f55");
 
     // Wings flap with sine
-    const wingOffset = Math.sin(frame*0.2 + o.phase) * 6;
+    const wingOffset = Math.sin(frame * 0.2 + o.phase) * 6;
     ctx.fillStyle = "#faa";
 
     // Left wing
     ctx.beginPath();
-    ctx.moveTo(o.x + o.w/2, o.y);
-    ctx.lineTo(o.x - 10, o.y - 10 + wingOffset);
-    ctx.lineTo(o.x, o.y + o.h/2);
+    ctx.moveTo(o.x + o.w / 2, o.y + o.h / 2);
+    ctx.lineTo(o.x - 10, o.y + o.h / 2 - 10 + wingOffset);
+    ctx.lineTo(o.x + o.w / 4, o.y + o.h);
     ctx.closePath();
     ctx.fill();
 
     // Right wing
     ctx.beginPath();
-    ctx.moveTo(o.x + o.w/2, o.y);
-    ctx.lineTo(o.x + o.w + 10, o.y - 10 - wingOffset);
-    ctx.lineTo(o.x + o.w, o.y + o.h/2);
+    ctx.moveTo(o.x + o.w / 2, o.y + o.h / 2);
+    ctx.lineTo(o.x + o.w + 10, o.y + o.h / 2 - 10 - wingOffset);
+    ctx.lineTo(o.x + o.w * 3 / 4, o.y + o.h);
     ctx.closePath();
     ctx.fill();
   }
@@ -192,49 +215,61 @@ function startGame() {
     if (gameOver) return;
     frameCount++;
 
-    ctx.clearRect(0,0,canvas.width,canvas.height);
+    ctx.clearRect(0, 0, canvas.width, canvas.height);
 
-    // Update player physics
-    player.vy += gravity;
-    player.y += player.vy;
-    if (player.y > groundY - player.h) { player.y = groundY - player.h; player.vy = 0; }
-
-    // Smooth duck/stand
+    // --- Smooth size changes first (so ground check uses updated size) ---
     player.h += (player.targetH - player.h) * 0.2;
     player.w += (player.targetW - player.w) * 0.2;
-    player.y = groundY - player.h;
+
+    // --- Apply physics ---
+    player.vy += gravity;
+    player.y += player.vy;
+
+    // Ground / onGround detection (robust)
+    if (player.y > groundY - player.h) {
+      player.y = groundY - player.h;
+      player.vy = 0;
+      player.onGround = true;
+    } else {
+      player.onGround = false;
+    }
 
     // Draw player
-    ctx.fillStyle = "#0f0";
-    drawRoundedRect(player.x, player.y, player.w, player.h, 5);
+    drawRoundedRect(player.x, player.y, player.w, player.h, 6, "#0f0");
 
     // Spawn obstacles
     spawnTimer++;
-    if (spawnTimer > 90 - speed*2) {
+    if (spawnTimer > 90 - speed * 2) {
       spawnObstacle();
       spawnTimer = 0;
     }
 
     // Update & draw obstacles
-    for (let i = obstacles.length-1; i>=0; i--) {
+    for (let i = obstacles.length - 1; i >= 0; i--) {
       const o = obstacles[i];
       o.x -= speed;
 
       if (o.flying) {
-        o.y = o.baseY + Math.sin(frameCount*0.1 + o.phase) * o.amplitude;
+        o.y = o.baseY + Math.sin(frameCount * 0.1 + o.phase) * o.amplitude;
         drawBird(o, frameCount);
       } else {
-        ctx.fillStyle = "#f00";
-        drawRoundedRect(o.x, o.y, o.w, o.h, 3);
+        drawRoundedRect(o.x, o.y, o.w, o.h, 3, "#f00");
       }
 
-      // Collision detection
+      // Collision detection (bounding box)
       if (player.x < o.x + o.w && player.x + player.w > o.x &&
           player.y < o.y + o.h && player.y + player.h > o.y) {
+        // Collision!
         lives--;
         if (lives > 0) {
+          // clear obstacles and reset player to standing on ground
           resetLife();
         } else {
+          // remove event listeners to avoid duplicates on restart
+          document.removeEventListener('keydown', onKeyDown);
+          document.removeEventListener('keyup', onKeyUp);
+          canvas.removeEventListener('touchstart', onTouchStart);
+          gameOver = true;
           alert("Game Over! All lives lost. Returning to form.");
           gameScreen.classList.add('hidden');
           formScreen.classList.remove('hidden');
@@ -245,7 +280,7 @@ function startGame() {
       if (o.x + o.w < 0) obstacles.splice(i, 1);
     }
 
-    // Score
+    // Score & difficulty
     score++;
     speed += 0.001;
     updateScore();
@@ -253,7 +288,9 @@ function startGame() {
     requestAnimationFrame(loop);
   }
 
-  loop();
+  // start
+  updateScore();
+  requestAnimationFrame(loop);
 }
 </script>
 </body>
