--- a/form4.html
+++ b/form4.html
@@ -47,13 +47,15 @@
 </div>
 
 <script>
-// ---- Leaderboard functions ----
+// -------- Leaderboard --------
 function loadLeaderboard() {
   return JSON.parse(localStorage.getItem('bonkLeaderboard') || "[]");
 }
+
 function saveLeaderboard(data) {
   localStorage.setItem('bonkLeaderboard', JSON.stringify(data));
 }
+
 function updateLeaderboardDisplay() {
   const data = loadLeaderboard();
   const leaderboardList = document.getElementById('leaderboardList');
@@ -64,190 +66,148 @@ function updateLeaderboardDisplay() {
     leaderboardList.appendChild(li);
   });
 }
+
 function addScore(name, email, score) {
   let data = loadLeaderboard();
-  data.push({name, email, score});
-  data.sort((a,b) => b.score - a.score);
+  // Check if player exists, update if new score higher
+  const idx = data.findIndex(e => e.name===name && e.email===email);
+  if (idx >= 0) {
+    if (score > data[idx].score) data[idx].score = score;
+  } else {
+    data.push({name,email,score});
+  }
+  data.sort((a,b)=>b.score - a.score);
   data = data.slice(0,5);
   saveLeaderboard(data);
   updateLeaderboardDisplay();
 }
 
-// ---- Payment & form ----
+// -------- Payment & Form --------
 const paymentScreen = document.getElementById('paymentScreen');
 const formScreen = document.getElementById('formScreen');
 const gameScreen = document.getElementById('gameScreen');
-let playerName = "", playerEmail = "";
+let playerName="", playerEmail="";
 
-document.getElementById('payBtn').addEventListener('click', () => {
+document.getElementById('payBtn').addEventListener('click',()=>{
   document.getElementById('payStatus').textContent = "Processing payment...";
-  setTimeout(() => {
+  setTimeout(()=>{
     document.getElementById('payStatus').textContent = "Payment successful ✅";
-    setTimeout(() => {
+    setTimeout(()=>{
       paymentScreen.classList.add('hidden');
       formScreen.classList.remove('hidden');
       updateLeaderboardDisplay();
-    }, 1000);
-  }, 1500);
+    },1000);
+  },1500);
 });
 
-document.getElementById('playerForm').addEventListener('submit', (e) => {
+document.getElementById('playerForm').addEventListener('submit',e=>{
   e.preventDefault();
   playerName = document.getElementById('name').value.trim();
   playerEmail = document.getElementById('email').value.trim();
-  if (playerName && playerEmail) {
+  if(playerName && playerEmail){
     formScreen.classList.add('hidden');
     gameScreen.classList.remove('hidden');
     startGame();
   }
 });
 
-// ---- The Game ----
-function startGame() {
+// -------- The Game --------
+function startGame(){
   const canvas = document.getElementById('gameCanvas');
   const ctx = canvas.getContext('2d');
   const groundY = 250;
 
-  let lives = 3;
-  let score = 0;
-  let speed = 5;
-  let obstacles = [];
-  let spawnTimer = 0;
-  let frameCount = 0;
+  let lives = 3, score = 0, bestScore = 0, speed = 5;
+  let obstacles = [], spawnTimer = 0, frameCount = 0;
   let gameOver = false;
 
   let player = {x:50,y:groundY-30,w:30,h:30,vy:0,onGround:true,targetH:30,targetW:30};
-  const gravity = 0.7;
-  const jumpForce = -12;
+  const gravity=0.7, jumpForce=-12;
 
-  // Controls
-  function onKeyDown(e) {
-    if (e.code==="Space" || e.code==="ArrowUp") {
-      e.preventDefault();
-      if (player.onGround) {
-        player.vy = jumpForce;
-        player.onGround = false;
-      }
-    }
-    if (e.code==="ArrowDown" || e.code==="KeyS") {
-      player.targetH = 18;
-      player.targetW = 40;
-    }
+  // -------- Controls --------
+  function onKeyDown(e){
+    if(e.code==="Space"||e.code==="ArrowUp"){ e.preventDefault(); if(player.onGround){player.vy=jumpForce;player.onGround=false;} }
+    if(e.code==="ArrowDown"||e.code==="KeyS"){player.targetH=18;player.targetW=40;}
   }
-  function onKeyUp(e) {
-    if (e.code==="ArrowDown" || e.code==="KeyS") {
-      player.targetH = 30;
-      player.targetW = 30;
-    }
-  }
-  function onTouchStart(e) {
-    e.preventDefault();
-    if (player.onGround) {
-      player.vy = jumpForce;
-      player.onGround = false;
-    }
-  }
-  document.addEventListener('keydown', onKeyDown);
-  document.addEventListener('keyup', onKeyUp);
-  canvas.addEventListener('touchstart', onTouchStart, {passive:false});
+  function onKeyUp(e){ if(e.code==="ArrowDown"||e.code==="KeyS"){player.targetH=30;player.targetW=30;} }
+  function onTouchStart(e){ e.preventDefault(); if(player.onGround){player.vy=jumpForce;player.onGround=false;} }
 
-  // Helpers
-  function drawRoundedRect(x,y,w,h,r,color) {
+  document.addEventListener('keydown',onKeyDown);
+  document.addEventListener('keyup',onKeyUp);
+  canvas.addEventListener('touchstart',onTouchStart,{passive:false});
+
+  // -------- Helpers --------
+  function drawRoundedRect(x,y,w,h,r,color){
     ctx.fillStyle=color;
     ctx.beginPath();
-    ctx.moveTo(x+r,y);
-    ctx.lineTo(x+w-r,y);
-    ctx.quadraticCurveTo(x+w,y,x+w,y+r);
-    ctx.lineTo(x+w,y+h-r);
-    ctx.quadraticCurveTo(x+w,y+h,x+w-r,y+h);
-    ctx.lineTo(x+r,y+h);
-    ctx.quadraticCurveTo(x,y+h,x,y+h-r);
-    ctx.lineTo(x,y+r);
-    ctx.quadraticCurveTo(x,y,x+r,y);
-    ctx.closePath();
-    ctx.fill();
+    ctx.moveTo(x+r,y); ctx.lineTo(x+w-r,y); ctx.quadraticCurveTo(x+w,y,x+w,y+r);
+    ctx.lineTo(x+w,y+h-r); ctx.quadraticCurveTo(x+w,y+h,x+w-r,y+h);
+    ctx.lineTo(x+r,y+h); ctx.quadraticCurveTo(x,y+h,x,y+h-r);
+    ctx.lineTo(x,y+r); ctx.quadraticCurveTo(x,y,x+r,y); ctx.closePath(); ctx.fill();
   }
-  function drawBird(o,frame) {
+  function drawBird(o,frame){
     drawRoundedRect(o.x,o.y,o.w,o.h,3,"#f55");
-    const wingOffset = Math.sin(frame*0.2 + o.phase) * 6;
+    const wingOffset=Math.sin(frame*0.2+o.phase)*6;
     ctx.fillStyle="#faa";
     ctx.beginPath();
     ctx.moveTo(o.x+o.w/2,o.y+o.h/2);
     ctx.lineTo(o.x-10,o.y+o.h/2-10+wingOffset);
     ctx.lineTo(o.x+o.w/4,o.y+o.h);
-    ctx.closePath();
-    ctx.fill();
+    ctx.closePath(); ctx.fill();
     ctx.beginPath();
     ctx.moveTo(o.x+o.w/2,o.y+o.h/2);
     ctx.lineTo(o.x+o.w+10,o.y+o.h/2-10-wingOffset);
     ctx.lineTo(o.x+o.w*3/4,o.y+o.h);
-    ctx.closePath();
-    ctx.fill();
+    ctx.closePath(); ctx.fill();
   }
-  function updateScore() {
-    document.getElementById('score').textContent = `Score: ${score} | Lives: ${lives}`;
+  function updateScoreDisplay(){ document.getElementById('score').textContent=`Score: ${score} | Lives: ${lives}`; }
+  function spawnObstacle(){
+    const type=Math.random();
+    if(type<0.6){ const h=30+Math.random()*20; obstacles.push({x:canvas.width,y:groundY-h,w:20,h:h,flying:false}); }
+    else{ const yPos=groundY-(60+Math.random()*40); obstacles.push({x:canvas.width,y:yPos,w:30,h:20,flying:true,baseY:yPos,amplitude:10+Math.random()*10,phase:Math.random()*Math.PI*2}); }
   }
-  function spawnObstacle() {
-    const type = Math.random();
-    if (type < 0.6) {
-      const h = 30+Math.random()*20;
-      obstacles.push({x:canvas.width,y:groundY-h,w:20,h:h,flying:false});
-    } else {
-      const yPos = groundY-(60+Math.random()*40);
-      obstacles.push({x:canvas.width,y:yPos,w:30,h:20,flying:true,baseY:yPos,amplitude:10+Math.random()*10,phase:Math.random()*Math.PI*2});
-    }
-  }
-  function resetLife() {
-    player.y = groundY - player.h;
-    player.vy = 0;
-    player.targetH=30; player.targetW=30;
-    obstacles = []; spawnTimer=0; score=0; speed=5; gameOver=false;
-    updateScore(); requestAnimationFrame(loop);
-  }
+  function resetLife(){ player.y=groundY-player.h; player.vy=0; player.targetH=30; player.targetW=30; obstacles=[]; spawnTimer=0; score=0; speed=5; gameOver=false; updateScoreDisplay(); requestAnimationFrame(loop); }
 
-  // Game loop
-  function loop() {
-    if (gameOver) return;
+  // -------- Game Loop --------
+  function loop(){
+    if(gameOver) return;
     frameCount++;
     ctx.clearRect(0,0,canvas.width,canvas.height);
 
     // Player physics
-    player.h += (player.targetH-player.h)*0.2;
-    player.w += (player.targetW-player.w)*0.2;
+    player.h += (player.targetH-player.h)*0.2; player.w += (player.targetW-player.w)*0.2;
     player.vy += gravity; player.y += player.vy;
-    if (player.y > groundY - player.h) { player.y = groundY - player.h; player.vy=0; player.onGround=true; }
-    else { player.onGround=false; }
+    if(player.y>groundY-player.h){ player.y=groundY-player.h; player.vy=0; player.onGround=true; } else player.onGround=false;
     drawRoundedRect(player.x,player.y,player.w,player.h,6,"#0f0");
 
     // Obstacles
     spawnTimer++;
-    if (spawnTimer > 90 - speed*2) { spawnObstacle(); spawnTimer=0; }
-    for (let i=obstacles.length-1;i>=0;i--) {
-      const o=obstacles[i]; o.x -= speed;
-      if (o.flying) { o.y=o.baseY+Math.sin(frameCount*0.1+o.phase)*o.amplitude; drawBird(o,frameCount);}
+    if(spawnTimer>90-speed*2){ spawnObstacle(); spawnTimer=0; }
+    for(let i=obstacles.length-1;i>=0;i--){
+      const o=obstacles[i]; o.x-=speed;
+      if(o.flying){ o.y=o.baseY+Math.sin(frameCount*0.1+o.phase)*o.amplitude; drawBird(o,frameCount);}
       else drawRoundedRect(o.x,o.y,o.w,o.h,3,"#f00");
-      if (player.x < o.x+o.w && player.x+player.w > o.x && player.y < o.y+o.h && player.y+player.h > o.y) {
-        lives--; if (lives>0) { resetLife(); } else {
+      if(player.x<o.x+o.w && player.x+player.w>o.x && player.y<o.y+o.h && player.y+player.h>o.y){
+        lives--; if(lives>0){ resetLife(); } else {
           document.removeEventListener('keydown',onKeyDown);
           document.removeEventListener('keyup',onKeyUp);
           canvas.removeEventListener('touchstart',onTouchStart);
           gameOver=true;
-          alert(`Game Over! Final Score: ${score}`);
-          addScore(playerName, playerEmail, score);
-          gameScreen.classList.add('hidden');
-          formScreen.classList.remove('hidden');
-        }
-        return;
+          alert(`Game Over! Highest Score: ${bestScore}`);
+          addScore(playerName,playerEmail,bestScore);
+          gameScreen.classList.add('hidden'); formScreen.classList.remove('hidden');
+        } return;
       }
-      if (o.x+o.w<0) obstacles.splice(i,1);
+      if(o.x+o.w<0) obstacles.splice(i,1);
     }
 
     // Score
-    score++; speed+=0.001; updateScore();
+    score++; if(score>bestScore) bestScore=score;
+    speed+=0.001; updateScoreDisplay();
     requestAnimationFrame(loop);
   }
 
-  updateScore();
+  updateScoreDisplay();
   requestAnimationFrame(loop);
 }
 </script>
