--- a/form6.html
+++ b/form6.html
@@ -100,7 +100,7 @@
 
         function initializePubNub() {
             pubnub = new PubNub({
-                publishKey: 'YOUR_PUBNUB_PUBLISH_KEY',
+                publishKey: 'pub-c-68268bc3-aaaf-4f33-be76-3bad63e49556',
                 subscribeKey: 'sub-c-01928852-def4-4659-be5f-4d2a37ce76d4',
                 userId: username
             });
