--- a/test5.html
+++ b/test5.html
@@ -9,8 +9,8 @@
   <script>
     // Replace with your own keys from admin.pubnub.com
     var pubnub = new PubNub({
-      publishKey: 'PUBNUB_PUBLISH_KEY',
-      subscribeKey: 'PUBNUB_SUBSCRIBE_KEY',
+      publishKey: 'pub-c-c41b3573-76e4-4ab1-9024-826d054729be',
+      subscribeKey: 'sub-c-7f05af19-abab-4e49-adca-aa9f0dc427d6',
       userId: 'user1'
     });
     var channel = '10chat';
